<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="6dp"
    android:paddingRight="6dp"
    android:paddingTop="6dp"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.sg0101.app.junggutour.SettingsActivity"
    tools:showIn="@layout/activity_settings">

    <android.support.v4.widget.NestedScrollView
        android:id="@+id/card_scrollview"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <android.support.v7.widget.CardView
            xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:id="@+id/setting_language_card"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            card_view:contentPadding= "3dp"
            card_view:cardUseCompatPadding="true"
            card_view:cardCornerRadius="6dp">
            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:gravity="center_vertical"
                    android:background="@drawable/layout_rectangle"
                    android:layout_weight="1">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingLeft="15dp"
                        android:textAppearance="?android:textAppearanceMediumInverse"
                        android:text="@string/settings_select_language_text"/>
                </LinearLayout>
                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center">
                    <com.sackcentury.shinebuttonlib.ShineButton
                        android:id="@+id/setting_lang_kor"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:layout_marginTop="15dp"
                        android:layout_marginBottom="15dp"
                        android:layout_marginLeft="25dp"
                        android:layout_marginRight="25dp"
                        android:layout_gravity="left|center_vertical"
                        android:src="@android:color/darker_gray"
                        app:btn_color="@android:color/darker_gray"
                        app:btn_fill_color="#FF6666"
                        app:allow_random_color="true"
                        app:enable_flashing="true"
                        app:big_shine_color="#FF6666"
                        app:click_animation_duration="200"
                        app:shine_animation_duration="1500"
                        app:shine_turn_angle="10"
                        app:small_shine_offset_angle="20"
                        app:shine_distance_multiple="1.5"
                        app:small_shine_color="#CC9999"
                        app:shine_count="15"
                        app:siShape="@drawable/lan_kor"/>

                    <com.sackcentury.shinebuttonlib.ShineButton
                        android:id="@+id/setting_lang_eng"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:layout_marginTop="15dp"
                        android:layout_marginBottom="15dp"
                        android:layout_marginLeft="25dp"
                        android:layout_marginRight="25dp"
                        android:layout_gravity="center_horizontal|center_vertical"
                        android:src="@android:color/darker_gray"
                        app:btn_color="@android:color/darker_gray"
                        app:btn_fill_color="#FF6666"
                        app:allow_random_color="true"
                        app:enable_flashing="true"
                        app:big_shine_color="#FF6666"
                        app:click_animation_duration="200"
                        app:shine_animation_duration="1500"
                        app:shine_turn_angle="10"
                        app:small_shine_offset_angle="20"
                        app:shine_distance_multiple="1.5"
                        app:small_shine_color="#CC9999"
                        app:shine_count="15"
                        app:siShape="@drawable/lan_eng"/>

                    <com.sackcentury.shinebuttonlib.ShineButton
                        android:id="@+id/setting_lang_chi"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:layout_marginTop="15dp"
                        android:layout_marginBottom="15dp"
                        android:layout_marginLeft="25dp"
                        android:layout_marginRight="25dp"
                        android:layout_gravity="right|center_vertical"
                        android:src="@android:color/darker_gray"
                        app:btn_color="@android:color/darker_gray"
                        app:btn_fill_color="#FF6666"
                        app:allow_random_color="true"
                        app:enable_flashing="true"
                        app:big_shine_color="#FF6666"
                        app:click_animation_duration="200"
                        app:shine_animation_duration="1500"
                        app:shine_turn_angle="10"
                        app:small_shine_offset_angle="20"
                        app:shine_distance_multiple="1.5"
                        app:small_shine_color="#CC9999"
                        app:shine_count="15"
                        app:siShape="@drawable/lan_cng"/>
                </LinearLayout>
            </LinearLayout>
        </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                xmlns:card_view="http://schemas.android.com/apk/res-auto"
                android:id="@+id/setting_voice_card"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                card_view:contentPadding= "3dp"
                card_view:cardUseCompatPadding="true"
                card_view:cardCornerRadius="6dp">
                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:gravity="center_vertical"
                        android:background="@drawable/layout_rectangle">
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:paddingLeft="15dp"
                            android:textAppearance="?android:textAppearanceMediumInverse"
                            android:text="@string/settings_select_voice_text"/>
                    </LinearLayout>
                    <LinearLayout
                        android:orientation="horizontal"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center">
                        <com.sackcentury.shinebuttonlib.ShineButton
                            android:id="@+id/setting_voice_male"
                            android:layout_width="50dp"
                            android:layout_height="50dp"
                            android:layout_marginTop="15dp"
                            android:layout_marginBottom="15dp"
                            android:layout_marginLeft="25dp"
                            android:layout_marginRight="25dp"
                            android:layout_gravity="left|center_vertical"
                            android:src="@android:color/darker_gray"
                            app:btn_color="@android:color/darker_gray"
                            app:btn_fill_color="#FF6666"
                            app:allow_random_color="false"
                            app:enable_flashing="true"
                            app:big_shine_color="#FF6666"
                            app:click_animation_duration="200"
                            app:shine_animation_duration="1500"
                            app:shine_turn_angle="10"
                            app:small_shine_offset_angle="20"
                            app:shine_distance_multiple="1.5"
                            app:small_shine_color="#CC9999"
                            app:shine_count="15"
                            app:siShape="@drawable/ic_voice_male"/>

                        <View
                            android:layout_width="50dp"
                            android:layout_height="50dp"
                            android:layout_marginTop="15dp"
                            android:layout_marginBottom="15dp"
                            android:layout_marginLeft="25dp"
                            android:layout_marginRight="25dp"
                            android:layout_gravity="center_horizontal|center_vertical"/>

                        <com.sackcentury.shinebuttonlib.ShineButton
                            android:id="@+id/setting_voice_female"
                            android:layout_width="50dp"
                            android:layout_height="50dp"
                            android:layout_marginTop="15dp"
                            android:layout_marginBottom="15dp"
                            android:layout_marginLeft="25dp"
                            android:layout_marginRight="25dp"
                            android:layout_gravity="right|center_vertical"
                            android:src="@android:color/darker_gray"
                            app:btn_color="@android:color/darker_gray"
                            app:btn_fill_color="#FF6666"
                            app:allow_random_color="true"
                            app:enable_flashing="true"
                            app:big_shine_color="#FF6666"
                            app:click_animation_duration="200"
                            app:shine_animation_duration="1500"
                            app:shine_turn_angle="10"
                            app:small_shine_offset_angle="20"
                            app:shine_distance_multiple="1.5"
                            app:small_shine_color="#CC9999"
                            app:shine_count="15"
                            app:siShape="@drawable/ic_voice_female"/>
                    </LinearLayout>
                </LinearLayout>
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                xmlns:card_view="http://schemas.android.com/apk/res-auto"
                android:id="@+id/setting_reference_card"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="82dp"
                android:layout_gravity="bottom"
                card_view:contentPadding= "3dp"
                card_view:cardUseCompatPadding="true"
                card_view:cardCornerRadius="6dp">
                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:gravity="center_vertical"
                        android:background="@drawable/layout_rectangle"
                        android:layout_weight="1">
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:paddingLeft="15dp"
                            android:textAppearance="?android:textAppearanceMediumInverse"
                            android:text="@string/settings_source_text"/>
                    </LinearLayout>
                    <LinearLayout
                        android:orientation="vertical"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical">
                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_margin="5dp"
                            android:paddingTop="5dp"
                            android:paddingLeft="10dp"
                            android:src="@drawable/ccl01"/>
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:paddingLeft="15dp"
                            android:paddingTop="5dp"
                            android:textAppearance="?android:textAppearanceSmall"
                            android:text="@string/providing_organization_text"/>
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:paddingLeft="15dp"
                            android:paddingTop="5dp"
                            android:textAppearance="?android:textAppearanceSmall"
                            android:text="@string/providing_information_text"/>
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:paddingLeft="15dp"
                            android:paddingTop="5dp"
                            android:textAppearance="?android:textAppearanceSmall"
                            android:text="@string/providing_picture_text"/>

                    </LinearLayout>
                </LinearLayout>
            </android.support.v7.widget.CardView>

        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>
</RelativeLayout>
